--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   pre_build:
     commands:
       - npm install
-      - cd client && npm install
+      - cd client && npm install && cd ../
   build:
     commands:
       - cd client && npm run build && cd ../
